fix(tabela de posts): remoção do overflow-y da tabela

--- a/public/css/tabelaPosts.css
+++ b/public/css/tabelaPosts.css
@@ -122,7 +122,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-   
+
+    /* Para não ter a barra de arrastar para baixo */
+    overflow-y: hidden;
+
     margin-top: 3rem;
  
     justify-content: center;
